--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 streamlit==0.79.0
 spacy==3.0.5
 wikipedia==1.4.0
+spacy>=2.2.0,<3.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.2.0/en_core_web_md-2.2.0.tar.gz#egg=en_core_web_md
